@@ -1,0 +1,4 @@
+include ../../tests.mk
+
+wrapset_stem = libglade
+top_module_name = (gnome glade)
